feat: use context and device measurements
