# routes/device.go
@@ -9,12 +9,19 @@ import (
 
 func DeviceRoutes(r *gin.Engine, controllers *controllers.DeviceController) {
 	apiAuth := r.Group("/api/device")
+
+	apiAuth.GET("/mac/:mac_address", controllers.DeviceProfileByMacAddress)
+
 	apiAuth.Use(middlewares.Auth())
 	{
 		apiAuth.POST("/", controllers.DeviceRegister)
 		apiAuth.GET("/list", controllers.DeviceList)
 		apiAuth.DELETE("/", controllers.DeviceDelete)
 		apiAuth.GET("/:uuid", controllers.DeviceProfile)
+		apiAuth.PUT("/:uuid", controllers.DeviceUpdate)
 		apiAuth.DELETE("/:uuid", controllers.DeviceDelete)
+		apiAuth.GET("/measurements", controllers.DeviceMeasurements)
+		apiAuth.DELETE("/measurements", controllers.DeviceDeleteMeasurements)
+		apiAuth.POST("/:uuid/measurements", controllers.DeviceCreateMeasurement)
 	}
 }
